sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of a vehicle is empty.
Error: Invalid arrivalLane definition for vehicle '0';
 must be one of ("current", or an int>=0)
Quitting (on error).
